<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@drawable/battleship_background"
    tools:context="com.massarwi.rawan.mybattleshipapplication.activities.MainActivity">


    <RadioGroup
        android:id="@+id/radioGroup_all"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentBottom="false"
        android:layout_marginEnd="155dp"
        android:layout_marginTop="5dp"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radio_Easy"
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Easy"
            android:textAllCaps="false"
            android:textColor="?android:attr/colorPrimaryDark"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radio_Medium"
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Medium"
            android:textAllCaps="false"
            android:textColor="?android:attr/colorPrimaryDark"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/radio_Hard"
            android:layout_width="200dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif-smallcaps"
            android:onClick="onRadioButtonClicked"
            android:text="@string/Hard"
            android:textAllCaps="false"
            android:textColor="?android:attr/colorPrimaryDark"
            android:textSize="30sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/Chosen_Level"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup_all"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="130dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/select_difficulty"
        android:textColor="?android:attr/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />


</RelativeLayout>
